--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
-  "devDependencies": {
-    "@types/node": "22.7.4",
-    "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.9.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "8.4.47",
-    "tailwindcss": "3.4.12",
-    "typescript": "5.5.4"
-  }
+ "devDependencies": {
+  "eslint": "8.57.0",
+  "eslint-config-next": "14.2.5",
+  "typescript": "5.5.4",
+  "tailwindcss": "3.4.12",
+  "postcss": "8.4.47",
+  "autoprefixer": "10.4.20",
+  "@types/node": "22.7.4",
+  "@types/react": "18.3.5",
+  "@types/react-dom": "18.3.0",
+  "eslint": "8.57.0"
+}
+
 }
