--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
-  "compilerOptions": {
+"compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "@/*": ["*"] },
     "target": "ES2022",
     "lib": [
       "dom",
